# ComplexMachine

./: .gitignore  Bash.cpp  CMakeLists.txt  LICENSE  Poly.cpp  Poly.h  Readme.md  main.cpp  utils.cpp  utils.h
.github/workflows/: ccpp.yml
Bash/: Bash.cpp  Bash.h  main.cpp
Complex/: ComplexFunction.cpp  ComplexFunction.h  ComplexNum.cpp  ComplexNum.h  utils.cpp  utils.h
Computer/: Computer.cpp  Computer.h  Memory.cpp  Memory.h
Polynomial/: Generate.cpp  Generate.h  Poly.cpp  Poly.h  Polynomial.cpp  Polynomial.h  Sentence.cpp  Sentence.h  Word.cpp  Word.h
Test/: main.cpp
